Fix displaying tooltip on smaller screens
ISSUE PLSW-73

--- a/Packlink/Resources/views/frontend/_resources/css/checkout.css
+++ b/Packlink/Resources/views/frontend/_resources/css/checkout.css
@@ -144,7 +144,7 @@
 
 .pl-tooltip-concrete {
     box-sizing: border-box;
-    width: 320px;
+    width: 270px;
     padding: 15px;
     position: absolute;
     background-color: white;
@@ -162,7 +162,7 @@
 }
 
 .pl-tooltip-top {
-    left: 50%;
+    left: -100px;
     transform: translateX(-50%);
     bottom: calc(100% + 15px);
 }
@@ -179,13 +179,13 @@
 }
 
 .pl-tooltip-top:after {
-    left: calc(50% - 5px);
+    right: 18px;
     border-color: white transparent transparent transparent;
     border-width: 6px;
 }
 
 .pl-tooltip-top:before {
-    left: calc(50% - 6px);
+    right: 17px;
     border-color: #dcdcdc transparent transparent transparent;
     border-width: 7px;
 }
